[project]
name = "unofficialpropel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-awesome-nav>=3.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material>=9.6.5",
    "mkdocs-open-in-new-tab>=1.0.8",
]
